[package]
name = "json_parser" # Or whatever your package name is
version = "0.1.0"
edition = "2021"

# This section defines the library
[lib]
name = "json_parser"
path = "src/lib.rs"

# This section defines the binary
[[bin]]
name = "json_parser_bin" # A different name for the binary executable
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "parser_bench"
harness = false